--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@Proceedings{	  bowers1987resultatives,
+  address	= {Austin, Texas},
+  author	= {Bowers, John},
+  booktitle	= {A Binary Analysis of Resultatives},
+  editor	= {Blight, Ralph C. and Moosally, Michelle J.},
+  publisher	= {The University of Texas at Austin},
+  title		= {A Binary Analysis of Resultatives},
+  year		= {1987}
+}
+
+@Article{	  lasersohn2020common-nouns-as,
+  author	= {Lasersohn, Peter},
+  journal	= {Linguistics and Philosophy},
+  title		= {Common nouns as modally non-rigid restricted variables},
+  year		= {2020},
+  doi		= {10.1007/s10988-019-09293-4}
+}
+
+@Book{		  alexiadou2015external-argume,
+  address	= {Oxford, United Kingdom ; New York, NY},
+  author	= {Alexiadou, Artemis and Anagnostopoulou, Elena and
+		  Sch{\"a}fer, Florian},
+  edition	= {First edition},
+  number	= {55},
+  publisher	= {Oxford University Press},
+  series	= {Oxford studies in theoretical linguistics},
+  title		= {External arguments in transitivity alternations: a
+		  layering approach},
+  year		= {2015}
+}
+
+@Book{		  2001current-studies,
+  address	= {New York},
+  edition	= {1st ed},
+  editor	= {Cinque, Guglielmo and Salvi, Giampaolo},
+  number	= {59},
+  publisher	= {Elsevier},
+  series	= {North-{Holland} linguistic series},
+  title		= {Current studies in {Italian} syntax: essays offered to
+		  {Lorenzo} {Renzi}},
+  year		= {2001}
+}
+
 @PhDThesis{	  stowell1981originsphrasestructure,
   author	= {Stowell, Timothy Angus},
   school	= {Massachusetts Institute of Technology},
