--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  carston2010metaphor-ad-ho,
+  author	= {Carston, Robyn},
+  journal	= {Proceedings of the Aristotelian Society},
+  pages		= {295--321},
+  title		= {Metaphor: {Ad} {Hoc} {Concepts}, {Literal} {Meaning} and
+		  {Mental} {Images}},
+  volume	= {110},
+  year		= {2010}
+}
+
+@Article{	  chomsky1995language-and-na,
+  author	= {Chomsky, Noam},
+  journal	= {Mind},
+  number	= {413},
+  pages		= {1--61},
+  title		= {Language and Nature},
+  volume	= {104},
+  year		= {1995}
+}
+
 @Proceedings{	  bowers1987resultatives,
   address	= {Austin, Texas},
   author	= {Bowers, John},
