--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@Article{	  murray2020communicative,
+  author	= {Murray, Sarah E. and Starr, William B.},
+  journal	= {Linguistics and Philosophy},
+  title		= {The structure of communicative acts},
+  year		= {2020},
+  doi		= {10.1007/s10988-019-09289-0}
+}
+
+@Article{	  kuhn2020gather,
+  author	= {Kuhn, Jeremy},
+  journal	= {Natural Language Semantics},
+  title		= {Gather/numerous as a mass/count opposition},
+  year		= {2020}
+}
+
 @Article{	  carston2010metaphor-ad-ho,
   author	= {Carston, Robyn},
   journal	= {Proceedings of the Aristotelian Society},
