result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Article{Hartmann2020Syntactic,
+author = {Hartmann, Jutta M. and Heycock, Caroline}, 
+title = {(Morpho)syntactic Variation in Agreement: Specificational Copular Clauses Across Germanic}, 
+journal = {Frontiers in Psychology}, 
+volume = {10}, 
+number = {}, 
+pages = {}, 
+year = {2020}, 
+abstract = {}, 
+location = {}, 
+keywords = {Copula; Copulative; Specificational; Agreement}}
+
+
+
 @phdthesis{Faraci1974For,
 author = {Faraci, Robert A.}, 
 title = {Aspects of the grammar of infinitives and for-phrases}, 
