--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,38 @@
 
+@Article{	  hartmann2020syntactic,
+  author	= {Hartmann, Jutta M. and Heycock, Caroline},
+  journal	= {Frontiers in Psychology},
+  title		= {(Morpho)syntactic Variation in Agreement: Specificational
+		  Copular Clauses Across Germanic},
+  volume	= {10},
+  year		= {2020}
+}
+
+@Book{		  fogal2000speech,
+  address	= {Oxford, United Kingdom},
+  editor	= {Fogal, Daniel and Harris, Daniel W. and Moss, Matt},
+  publisher	= {Oxford University Press},
+  title		= {New work on speech acts},
+  year		= {2018}
+}
+
+@Article{	  green2000illocutionary,
+  author	= {Green, Mitchell S.},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {435--473},
+  title		= {Illocutionary force and semantic content},
+  volume	= {23},
+  year		= {2000}
+}
+
+@Book{		  clark1996using-language,
+  author	= {Clark, Herbert C.},
+  publisher	= {Cambridge University Press},
+  title		= {Using Language},
+  year		= {1996}
+}
+
 @Article{	  murray2020communicative,
   author	= {Murray, Sarah E. and Starr, William B.},
   journal	= {Linguistics and Philosophy},
