--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  feiman2020primingquantifierscope,
+  author	= {Feiman, Roman and Maldonado, Mora and Snedeker, Jesse},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {35},
+  title		= {Priming quantifier scope: {Reexamining} the evidence
+		  against scope inversion},
+  volume	= {5},
+  year		= {2020},
+  doi		= {10.5334/gjgl.1201}
+}
+
 @Article{	  hartmann2020syntactic,
   author	= {Hartmann, Jutta M. and Heycock, Caroline},
   journal	= {Frontiers in Psychology},
