--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,102 @@
 
+@Article{	  landau2020constraining-he,
+  author	= {Landau, Idan},
+  booktitle	= {Linguistic Inquiry},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {281--318},
+  title		= {Constraining Head-Stranding Ellipsis},
+  volume	= {51},
+  year		= {2020},
+  doi		= {10.1162/ling{\_}a{\_}00347}
+}
+
+@Article{	  han2020null-objects-in,
+  author	= {Han, Chung-hye and Kim, Kyeong-min and Moulton, Keir and
+		  Lidz, Jeffrey},
+  booktitle	= {Linguistic Inquiry},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {319--340},
+  title		= {Null Objects in Korean: Experimental Evidence for the
+		  Argument Ellipsis Analysis},
+  volume	= {51},
+  year		= {2020},
+  doi		= {10.1162/ling{\_}a{\_}00342}
+}
+
+@Article{	  landau2020on-the-nonexist,
+  author	= {Landau, Idan},
+  booktitle	= {Linguistic Inquiry},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {341--365},
+  title		= {On the Nonexistence of Verb-Stranding VP-Ellipsis},
+  volume	= {51},
+  year		= {2020},
+  doi		= {10.1162/ling{\_}a{\_}00346}
+}
+
+@Article{	  overfelt2020a-remark-on-the,
+  author	= {Overfelt, Jason},
+  booktitle	= {Linguistic Inquiry},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {366--394},
+  title		= {A Remark on the Economics of Quantifier Raising},
+  volume	= {51},
+  year		= {2020},
+  doi		= {10.1162/ling{\_}a{\_}00338}
+}
+
+@Article{	  bozic2020strictly-local,
+  author	= {Bo{\v z}i{\v c}, Jurij},
+  booktitle	= {Linguistic Inquiry},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {395--409},
+  title		= {Strictly Local Impoverishment: An Intervention Effect},
+  volume	= {51},
+  year		= {2020},
+  doi		= {10.1162/ling{\_}a{\_}00339}
+}
+
+@Article{	  stepanov2020when-a-wh-word-,
+  author	= {Stepanov, Arthur and Moussaoui, Ali Al},
+  booktitle	= {Linguistic Inquiry},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {410--423},
+  title		= {When a Wh-Word Refuses to Stay in Situ},
+  volume	= {51},
+  year		= {2020},
+  doi		= {10.1162/ling{\_}a{\_}00345}
+}
+
+@Article{	  carstens2020only-n-nguni,
+  author	= {Carstens, Vicki and Zeller, Jochen},
+  booktitle	= {Linguistic Inquiry},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  title		= {Only in Nguni: A Phrase-Final Particle Meets Antisymmetry
+		  Theory},
+  volume	= {51},
+  year		= {2020},
+  doi		= {10.1162/ling{\_}a{\_}00337}
+}
+
+@Article{	  kim2019the-dative-disp,
+  author	= {Kim, Dganit Jenia and Siloni, Tal},
+  booktitle	= {Linguistic Inquiry},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {237--279},
+  title		= {The Dative Dispositional Construction in Russian},
+  volume	= {51},
+  year		= {2019},
+  doi		= {10.1162/ling{\_}a{\_}00341}
+}
+
 @Article{	  feiman2020primingquantifierscope,
   author	= {Feiman, Roman and Maldonado, Mora and Snedeker, Jesse},
   journal	= {Glossa: a journal of general linguistics},
