--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  freidin2020adventures-in-e,
+  address	= {Cambridge},
+  author	= {Freidin, Robert},
+  publisher	= {Cambridge University Press},
+  title		= {Adventures in English Syntax},
+  year		= {2020},
+  doi		= {DOI: 10.1017/9781108767774}
+}
+
 @Article{	  landau2020constraining-he,
   author	= {Landau, Idan},
   booktitle	= {Linguistic Inquiry},
@@ -8956,7 +8965,7 @@
   pages		= {983--1026},
   title		= {Epistemic Modals},
   volume	= {116},
-  year		= {November 2007}
+  year		= {2007}
 }
 
 @Article{	  yalcin2009more-on-epistemic-mo,
@@ -12148,7 +12157,7 @@
   publisher	= {Springer Netherlands},
   title		= {Color, context, and compositionality},
   volume	= {174},
-  year		= {2010-05-01},
+  year		= {2010},
   doi		= {10.1007/s11229-009-9685-7}
 }
 
@@ -12211,16 +12220,15 @@
 }
 
 @Article{	  malt2010why-we-should-do-wit,
-  address	= {{COMMERCE PLACE, 350 MAIN ST, MALDEN 02148, MA USA}},
   author	= {Malt, Barbara C.},
   journal	= {{MIND \& LANGUAGE}},
-  number	= {{5}},
-  pages		= {{622-633}},
+  number	= {5},
+  pages		= {622-633},
   publisher	= {{WILEY-BLACKWELL}},
   type		= {{Article}},
   title		= {{Why We Should Do Without Concepts}},
-  volume	= {{25}},
-  year		= {{2010}},
+  volume	= {25},
+  year		= {2010},
   doi		= {{10.1111/j.1468-0017.2010.01405.x}}
 }
 
@@ -14181,7 +14189,7 @@
   publisher	= {The MIT Press},
   title		= {Relativized Minimality and Pronoun Incorporation},
   volume	= {21},
-  year		= {Spring, 1990}
+  year		= {1990}
 }
 
 @Article{	  boskovic2007on-the-locality-and-,
@@ -14877,7 +14885,7 @@
   publisher	= {National Academy of Sciences},
   title		= {A Syntactic Specialization for Broca's Area},
   volume	= {97},
-  year		= {May 23, 2000}
+  year		= {2000}
 }
 
 @InProceedings{	  morgan1970on-the-criterion-of-,
@@ -15465,7 +15473,7 @@
   title		= {Backward Versus Forward Anaphora: Reconstruction in Child
 		  Grammar.},
   volume	= {8},
-  year		= {1999/06//1999}
+  year		= {1999}
 }
 
 @Unpublished{	  johnson2001what-vp-ellipsis-can,
@@ -15693,7 +15701,7 @@
   pages		= {41--67},
   title		= {Relative Readings of Many, Often, and Generics},
   volume	= {9},
-  year		= {2001/03/01/}
+  year		= {2001}
 }
 
 @Article{	  cohen2000the-king-of-france-i,
@@ -15713,7 +15721,7 @@
   pages		= {125--165},
   title		= {Topic, Focus, and the Interpretation of Bare Plurals},
   volume	= {10},
-  year		= {2002/06/01/}
+  year		= {2002}
 }
 
 @Unpublished{	  fintel2009beyond-de-re-de-dict,
@@ -31527,12 +31535,6 @@
   year		= {2014}
 }
 
-@Unpublished{	  tonhauser2015empirical-evidence-i,
-  author	= {Tonhauser, Judith and Matthewson, Lisa},
-  title		= {Empirical evidence in research on meaning},
-  year		= {July 14, 2015}
-}
-
 @Unpublished{	  tieu2015on-the-role-of-alter,
   author	= {Tieu, L. and Yatsushiro, K. and Cremers, A. and Romoli, J.
 		  and Sauerland, U. and Chemla, E.},
@@ -37064,9 +37066,8 @@
   journal	= {Journal of Child Language},
   number	= {4},
   pages		= {861--889},
-  title		= {Acquisition of the polarity sensitive item renhe `any' in
-		  {Mandarin} {Chinese}{\textless}a
-		  href="\#fns01"{\textgreater}*{\textless}/a{\textgreater}},
+  title		= {{Acquisition of the polarity sensitive item renhe `any' in
+		  Mandarin Chinese}},
   volume	= {41},
   year		= {2014},
   doi		= {10.1017/S0305000913000275}
@@ -37077,9 +37078,7 @@
   journal	= {Journal of Linguistics},
   number	= {2},
   pages		= {367--411},
-  title		= {Sentential negation in early child {English}{\textless}a
-		  href="\#fn1"{\textgreater}{\textless}span
-		  class="sup"{\textgreater}1{\textless}/span{\textgreater}{\textless}/a{\textgreater}},
+  title		= {Sentential negation in early child English},
   volume	= {49},
   year		= {2013},
   doi		= {10.1017/S0022226712000382}
@@ -37090,8 +37089,7 @@
   journal	= {Journal of Child Language},
   number	= {5},
   pages		= {965--1005},
-  title		= {Focus identification in child {Mandarin}{\textless}a
-		  href="\#fn01a"{\textgreater}*{\textless}/a{\textgreater}},
+  title		= {Focus identification in child Mandarin},
   volume	= {37},
   year		= {2010},
   doi		= {10.1017/S0305000909990110}
