--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1554,9 +1554,8 @@
 
 @Article{	  poesio1992telescoping,
   author	= {Poesio, Massimo and Zucchi, Alessandro},
-  number	= {0},
   pages		= {347-366},
-  title		= {On {{Telescoping}}},
+  title		= {On {Telescoping}},
   volume	= {2},
   year		= {1992},
   doi		= {10.3765/salt.v2i0.3034}
@@ -11292,7 +11291,7 @@
   number	= {1},
   pages		= {1--33},
   publisher	= {Blackwell Publishing Ltd},
-  title		= {Against `Dummy Do': The `Low DoAUX'Hypothesis1},
+  title		= {Against Dummy Do: The Low Do AUX Hypothesis},
   volume	= {110},
   year		= {2012}
 }
@@ -18603,7 +18602,7 @@
   journal	= {Linguistic Inquiry},
   number	= {1},
   pages		= {156--163},
-  title		= {Definite {NP}s arent quantifiers},
+  title		= {Definite {NP}'s aren't quantifiers},
   volume	= {23},
   year		= {1992}
 }
@@ -19789,7 +19788,7 @@
   journal	= {Linguistics and Philosophy},
   number	= {1},
   pages		= {1--43},
-  title		= {Indexicality and deixis},
+  title		= {Indexicality and Deixis},
   volume	= {16},
   year		= {1993}
 }
@@ -34650,17 +34649,6 @@
   volume	= {42},
   year		= {2015},
   doi		= {10.1017/S0305000914000683}
-}
-
-@Article{	  harbour2010descriptive-and-expl,
-  author	= {Harbour, Daniel},
-  journal	= {Morphology},
-  number	= {2},
-  pages		= {223--245},
-  title		= {Descriptive and explanatory markedness},
-  volume	= {21},
-  year		= {2010},
-  doi		= {10.1007/s11525-010-9167-0}
 }
 
 @Article{	  harbour2015poor-pronoun-systems,
