--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@Article{	  elbourne2019vagueness-conte,
+  author	= {Elbourne, Paul},
+  journal	= {Semantics and Pragmatics},
+  number	= {0},
+  pages		= {22},
+  title		= {Vagueness, contextualism, and ellipsis},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.22}
+}
+
+@Article{	  zakkou2020presupposing-co,
+  author	= {Zakkou, Julia},
+  journal	= {Semantics and Pragmatics},
+  pages		= {21},
+  title		= {Presupposing counterfactuality},
+  volume	= {12},
+  year		= {2020},
+  doi		= {10.3765/sp.12.21}
+}
+
+@Article{	  caponigro2020unveiling-multi,
+  author	= {Caponigro, Ivano and F{\u a}l{\u a}uș, Anamaria},
+  journal	= {Semantics and Pragmatics},
+  number	= {0},
+  pages		= {2},
+  title		= {Unveiling multiple wh - free relative clauses and their
+		  functional wh -words},
+  volume	= {13},
+  year		= {2020},
+  doi		= {10.3765/sp.13.2}
+}
+
+@Article{	  korotkova2020evidentialmeaningnot,
+  author	= {Korotkova, Natasha},
+  journal	= {Semantics and Pragmatics},
+  number	= {0},
+  title		= {Evidential meaning and (not-)at-issueness},
+  volume	= {13},
+  year		= {2020},
+  doi		= {10.3765/sp.13.4}
+}
+
 @Book{		  freidin2020adventures-in-e,
   address	= {Cambridge},
   author	= {Freidin, Robert},
