--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  renans2019,
+  author	= {Renans, Agata and De Veaugh-Geiss, Joseph P.},
+  journal	= {Semantics and Pragmatics},
+  number	= {11},
+  pages		= {1--50},
+  title		= {Experimental studies on it-clefts and predicate
+		  interpretation},
+  volume	= {12},
+  year		= {2019}
+}
+
+@Article{	  schmitt2019,
+  author	= {Schmitt, Viola},
+  journal	= {Semantics and Pragmatics},
+  number	= {17},
+  pages		= {1--49},
+  title		= {Pluralities across categories and plural projection},
+  volume	= {12},
+  year		= {2019}
+}
+
+@Article{	  faller2019,
+  author	= {Faller, Martina},
+  journal	= {Semantics and Pragmatics},
+  number	= {8},
+  pages		= {1--46},
+  title		= {The discourse commitments of illocutionary reportatives},
+  volume	= {12},
+  year		= {2019}
+}
+
 @Article{	  elbourne2019vagueness-conte,
   author	= {Elbourne, Paul},
   journal	= {Semantics and Pragmatics},
