result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,15 @@
+@Article{Pountain2020,
+author = {Pountain, Christopher}, 
+title = {Copulas in the Romance Languages}, 
+journal = {Oxford Research Encyclopedia of Linguistics}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2020}, 
+keywords = {copula; copulative}}
+
+
+
 @Article{Hartmann2020Syntactic,
 author = {Hartmann, Jutta M. and Heycock, Caroline}, 
 title = {(Morpho)syntactic Variation in Agreement: Specificational Copular Clauses Across Germanic}, 
