--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  pountain2020copulas,
+  author	= {Christopher Pountain},
+  journal	= {Oxford Research Encyclopedias},
+  publisher	= {Oxford University Press},
+  title		= {Copulas in the Romance Languages},
+  year		= {2020},
+  doi		= {10.1093/acrefore/9780199384655.013.641}
+}
+
 @Article{	  renans2019,
   author	= {Renans, Agata and De Veaugh-Geiss, Joseph P.},
   journal	= {Semantics and Pragmatics},
