--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  fernandez-salgueiro2020on-epp-effects-,
+  author	= {Fern{\'a}ndez-Salgueiro, Gerardo},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {36},
+  title		= {On {EPP} effects and the properties of {Core} {Functional}
+		  {Categories}},
+  volume	= {5},
+  year		= {2020},
+  doi		= {10.5334/gjgl.842}
+}
+
 @Article{	  pountain2020copulas,
   author	= {Christopher Pountain},
   journal	= {Oxford Research Encyclopedias},
