result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,28 @@
+@Book{Myler2016Building-and-In,
+author = {Myler, Neil}, 
+title = {Building and Interpreting Possession Sentences}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {MIT Press}, 
+address = {Cambridge, MA}, 
+year = {2016}, 
+abstract = {}, 
+keywords = {copula, possession, predication, suppletive allomorphy}}
+
+
+@Article{Myler2018Complex-copula,
+author = {Myler, Neil}, 
+title = {Complex copula systems as suppletive allomorphy}, 
+journal = {Glossa: a journal of general linguistics}, 
+volume = {3}, 
+number = {1}, 
+pages = {51}, 
+year = {2018}, 
+keywords = {copulas; Late Insertion; possession; predication; suppletive allomorphy, syncretism}}
+
+
+
 @Article{Pountain2020,
 author = {Pountain, Christopher}, 
 title = {Copulas in the Romance Languages}, 
