--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Book{		  myler2016building-and-in,
+  address	= {Cambridge, MA},
+  author	= {Myler, Neil},
+  publisher	= {MIT Press},
+  title		= {Building and {Interpreting} {Possession} {Sentences}},
+  year		= {2016}
+}
+
+@Article{	  myler2018complex-copula,
+  author	= {Myler, Neil},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {51},
+  title		= {Complex copula systems as suppletive allomorphy},
+  volume	= {3},
+  year		= {2018},
+  doi		= {10.5334/gjgl.214}
+}
+
 @Article{	  fernandez-salgueiro2020on-epp-effects-,
   author	= {Fern{\'a}ndez-Salgueiro, Gerardo},
   journal	= {Glossa: a journal of general linguistics},
