--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Proceedings{	  appelbaum1996,
+  author	= {Appelbaum, I.},
+  booktitle	= {The lack of invariance problem and the goal of speech
+		  perception},
+  publisher	= {IEEE},
+  title		= {The lack of invariance problem and the goal of speech
+		  perception},
+  year		= {1996}
+}
+
+@Article{	  hammarberg1976the-metaphysics,
+  author	= {Hammarberg, Robert},
+  journal	= {Journal of Phonetics},
+  number	= {4},
+  pages		= {353--363},
+  title		= {The metaphysics of coarticulation},
+  volume	= {4},
+  year		= {1976},
+  doi		= {10.1016/S0095-4470(19)31261-6}
+}
+
 @Book{		  myler2016building-and-in,
   address	= {Cambridge, MA},
   author	= {Myler, Neil},
