--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,37 @@
 
+@Article{	  dalessandro2017,
+  author	= {D'Alessandro, Roberta and van Oostendorp, Marc},
+  journal	= {Front Psychol},
+  pages		= {2002},
+  title		= {On the Diversity of Linguistic Data and the Integration of
+		  the Language Sciences.},
+  volume	= {8},
+  year		= {2017}
+}
+
+@Article{	  sprouse2012,
+  author	= {Sprouse, Jon and Almeida, Diogo},
+  journal	= {Journal of Linguistics},
+  number	= {3},
+  pages		= {609--652},
+  title		= {Assessing the reliability of textbook data in syntax:
+		  Adger's Core Syntax},
+  volume	= {48},
+  year		= {2012}
+}
+
+@Article{	  davis2020crossing-and-st,
+  author	= {Davis, Colin},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {17},
+  title		= {Crossing and stranding at edges: {On} intermediate
+		  stranding and phase theory},
+  volume	= {5},
+  year		= {2020},
+  doi		= {10.5334/gjgl.854}
+}
+
 @Proceedings{	  appelbaum1996,
   author	= {Appelbaum, I.},
   booktitle	= {The lack of invariance problem and the goal of speech
