--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  blevins2004evolutionary,
+  address	= {Cambridge ; New York},
+  author	= {Blevins, Juliette},
+  publisher	= {Cambridge University Press},
+  title		= {Evolutionary phonology: the emergence of sound patterns},
+  year		= {2004}
+}
+
+@Book{		  huang2009syntaxchinese,
+  address	= {Cambridge, UK; New York},
+  author	= {Huang, Cheng-Teh James and Li, Yen-hui Audrey and Li,
+		  Yafei},
+  publisher	= {Cambridge University Press},
+  title		= {The syntax of Chinese},
+  year		= {2009}
+}
+
 @Article{	  dalessandro2017,
   author	= {D'Alessandro, Roberta and van Oostendorp, Marc},
   journal	= {Front Psychol},
@@ -10063,7 +10080,7 @@
 
 @InProceedings{	  bjorkman2012a-syntactic-correlat,
   address	= {Amherst},
-  author	= {Bronwyn M. Bjorkman},
+  author	= {Bjorkman, Bronwyn M.},
   booktitle	= {Proceedings of NELS 41},
   organization	= {GLSA},
   publisher	= {GLSA},
