result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,24 @@
+@phdthesis{Svenonius1994Nexus,
+author = {Svenonius, Peter}, 
+title = {Dependent nexus: Subordinate predication structures in English and the Scandinavian languages}, 
+school = {Universtity of California, Santa Cruz}, 
+address = {San Francisco}, 
+pages = {288}, 
+year = {1994}, 
+keywords = {Predication; Predicative; Copula; Copulative}}
+
+
+
+@phdthesis{Roy2006Predication,
+author = {Roy, Isabelle A.}, 
+title = {Non-verbal predications: A syntactic analysis of predicational copular sentences}, 
+school = {University of Southern California}, 
+address = {Los Angeles, CA}, 
+pages = {343}, 
+year = {2006}, 
+keywords = {Language, literature and linguistics; Copular constructions; Nonverbal predications; Predicational copular sentences; Syntactic; Linguistics}}
+
+
 @Book{Myler2016Building-and-In,
 author = {Myler, Neil}, 
 title = {Building and Interpreting Possession Sentences}, 
