--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@InCollection{	  svenonius2006degree,
+  address	= {Berlin, Boston},
+  author	= {Svenonius, Peter and Kennedy, Christopher},
+  booktitle	= {Phases of Interpretation},
+  editor	= {Frascaralli, Mara},
+  pages		= {133-162},
+  publisher	= {De Gruyter Mouton},
+  title		= {Northern Norwegian degree questions and the syntax of
+		  measurement},
+  year		= {2006}
+}
+
+@PhDThesis{	  svenonius1994nexus,
+  address	= {San Francisco},
+  author	= {Svenonius, Peter},
+  pages		= {288},
+  school	= {Universtity of California, Santa Cruz},
+  title		= {Dependent nexus: Subordinate predication structures in
+		  English and the Scandinavian languages},
+  year		= {1994}
+}
+
+@PhDThesis{	  roy2006predication,
+  address	= {Los Angeles, CA},
+  author	= {Roy, Isabelle A.},
+  pages		= {343},
+  school	= {University of Southern California},
+  title		= {Non-verbal predications: A syntactic analysis of
+		  predicational copular sentences},
+  year		= {2006}
+}
+
 @Book{		  blevins2004evolutionary,
   address	= {Cambridge ; New York},
   author	= {Blevins, Juliette},
@@ -17749,7 +17781,7 @@
   year		= {2008}
 }
 
-@PhDThesis{	  rett2008degree-modification-,
+@PhDThesis{	  rett2008degree-modification,
   author	= {Rett, Jessica},
   school	= {State University of New Jersey},
   title		= {Degree Modification in Natural Language},
@@ -46715,7 +46747,7 @@
   doi		= {10.1146/annurev-linguistics-011619-030303}
 }
 
-@Article{	  hohaus2020the-grammar-of-,
+@Article{	  hohaus2020the-grammar-of-degree,
   author	= {Hohaus, Vera and Bochnak, M. Ryan},
   journal	= {Annual Review of Linguistics},
   number	= {1},
