--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -4961,6 +4961,27 @@
 
 @Unpublished{	  solt2016multidimensionality-,
   author	= {Solt, Stephanie},
+  title		= {Multidimensionality, subjectivity and scales: experimental
+		  evidence},
+  year		= {2016}
+}
+
+@Article{	  nickel2010generically-free-cho,
+  author	= {Nickel, Bernhard},
+  journal	= {Linguistics and Philosophy},
+  number	= {6},
+  pages		= {479--512},
+  title		= {Generically free choice},
+  volume	= {33},
+  year		= {2010}
+}
+
+@Article{	  nickel2008generics-and-the-way,
+  author	= {Nickel, Bernhard},
+  journal	= {Linguistics and Philosophy},
+  number	= {6},
+  pages		= {629--648},
+  title		= {Generics and the ways of normality},
   volume	= {31},
   year		= {2008}
 }
