--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,144 @@
 
+@Article{	  trettenbrein2015ug,
+  author	= {Trettenbrein, Patrick C.},
+  journal	= {Questions and Answers in Linguistics},
+  number	= {1},
+  pages		= {1--10},
+  title		= {The ``grammar'' in Universal Grammar: A biolinguistic
+		  clarification},
+  volume	= {2},
+  year		= {2015}
+}
+
+@InBook{	  adger2011features,
+  author	= {Adger, David and Svenonius, Peter},
+  booktitle	= {The Oxford Handbook of Linguistic Minimalism},
+  editor	= {Boeckx, Cedric},
+  publisher	= {Oxford University Press},
+  title		= {Features in Minimalist Syntax},
+  year		= {2011}
+}
+
+@InBook{	  corbertt2010features,
+  author	= {Corbett, Greville G.},
+  booktitle	= {Features},
+  editor	= {Kibort, Anna and Corbett, Greville G.},
+  pages		= {17-36},
+  publisher	= {Oxford University Press},
+  title		= {Features: essential notions},
+  year		= {2010}
+}
+
+@Article{	  chomsky1981form,
+  author	= {Chomsky, Noam},
+  journal	= {The Linguistic Review},
+  title		= {On the Representation of Form and Function},
+  volume	= {1},
+  year		= {1981}
+}
+
+@InBook{	  rizzi2014variation,
+  author	= {Rizzi, Luigi},
+  booktitle	= {Linguistic Variation in the Minimalist Framework},
+  editor	= {Picallo, Carme},
+  pages		= {12-35},
+  publisher	= {Oxford University Press},
+  title		= {On the elements of syntactic variation},
+  year		= {2014}
+}
+
+@InBook{	  rodriguez-mondonedo2019,
+  author	= {Rodr{\'i}guez-Mondo{\~n}edo, Miguel},
+  booktitle	= {The Syntactic Variation of Spanish Dialects},
+  editor	= {Gallego, {\'A}ngel J.},
+  pages		= {245-274},
+  publisher	= {Oxford University Press},
+  title		= {Syntactic Phenomena in Peruvian Spanish},
+  year		= {2019}
+}
+
+@InBook{	  trevino2019reportative,
+  author	= {Trevi{\~n}o, Esthela},
+  booktitle	= {The Syntactic Variation of Spanish Dialects},
+  editor	= {Gallego, {\'A}ngel J.},
+  pages		= {355-402},
+  publisher	= {Oxford University Press},
+  title		= {Reportative que in Mexican Spanish},
+  year		= {2019}
+}
+
+@InBook{	  camacho2019colombian,
+  author	= {Camacho, Jos{\'e}},
+  booktitle	= {The Syntactic Variation of Spanish Dialects},
+  editor	= {Gallego, {\'A}ngel J.},
+  pages		= {329-354},
+  publisher	= {Oxford University Press},
+  title		= {On Left-Peripheral Expletives in Central Colombian
+		  Spanish},
+  year		= {2019}
+}
+
+@InBook{	  fernandez-ordonez2019mass,
+  author	= {Fern{\'a}ndez-Ord{\'o}{\~n}ez, In{\'e}s},
+  booktitle	= {The Syntactic Variation of Spanish Dialects},
+  editor	= {Gallego, {\'A}ngel J.},
+  pages		= {60-107},
+  publisher	= {Oxford University Press},
+  title		= {Mass/Count Distinctions in Ibero-Romance Dialects},
+  year		= {2019}
+}
+
+@InBook{	  romero2019empty,
+  author	= {Romero, Juan},
+  booktitle	= {The Syntactic Variation of Spanish Dialects},
+  editor	= {Gallego, {\'A}ngel J.},
+  pages		= {108-126},
+  publisher	= {Oxford University Press},
+  title		= {Empty Categories and Clitics},
+  year		= {2019}
+}
+
+@InBook{	  tullio2019clitic,
+  author	= {di Tullio, {\'A}ngela and Saab, Andr{\'e}s and Zdrojewski,
+		  Pablo},
+  booktitle	= {The Syntactic Variation of Spanish Dialects},
+  editor	= {Gallego, Angel J.},
+  publisher	= {Oxford University Press},
+  title		= {Clitic Doubling in a Doubling World},
+  year		= {2019}
+}
+
+@InBook{	  bosque2019caribbean,
+  author	= {Bosque, Ignacio and Brucart, Jos{\'e} M.},
+  booktitle	= {The Syntactic Variation of Spanish Dialects},
+  editor	= {Gallego, {\'A}ngel J.},
+  pages		= {297-328},
+  publisher	= {Oxford University Press},
+  title		= {Caribbean Spanish and Theoretical Syntax: An Overview},
+  year		= {2019}
+}
+
+@InBook{	  collins1990labels,
+  address	= {Malden, MA},
+  author	= {Collins, Chris},
+  booktitle	= {Derivation and explanation in the Minimalist Program},
+  editor	= {Epstein, Samuel David and Seely, T. Daniel},
+  pages		= {42-64},
+  publisher	= {Blackwell Pub.},
+  title		= {Eliminating labels},
+  year		= {2002}
+}
+
+@Book{		  speas1990phrase,
+  address	= {Dordrecht; Boston},
+  author	= {Speas, Margaret},
+  pages		= {306},
+  publisher	= {Kluwer Academic Publishers},
+  title		= {Phrase structure in natural language},
+  volume	= {Studies in natural language and linguistic theory; v. 21},
+  year		= {1990}
+}
+
 @InCollection{	  svenonius2006degree,
   address	= {Berlin, Boston},
   author	= {Svenonius, Peter and Kennedy, Christopher},
