--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,50 @@
 
+@Article{	  balari2020ling,
+  author	= {Balari, Sergi},
+  journal	= {ReGroc. Revista de Gram{\'a}tica Orientada a las
+		  Competencias},
+  number	= {1},
+  pages		= {1},
+  title		= {Ling{\"u}{\'i}stica: la ci{\`e}ncia del llenguatge},
+  volume	= {2},
+  year		= {2020}
+}
+
+@Article{	  keine2020locality,
+  author	= {Keine, Stefan},
+  journal	= {Syntax},
+  title		= {Locality Domains in Syntax: Evidence from Sentence
+		  Processing},
+  year		= {2020}
+}
+
+@Article{	  tanaka2019wh,
+  author	= {Tanaka, Misako},
+  journal	= {Syntax},
+  title		= {Similarities and Differences between Quantifier Raising
+		  and Wh Movement Out of Adjuncts},
+  year		= {2019}
+}
+
+@Article{	  brody2000perfect,
+  author	= {Brody, Michael},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {29--56},
+  title		= {Mirror Theory: Syntactic Representation in Perfect
+		  Syntax},
+  volume	= {31},
+  year		= {2000}
+}
+
+@Book{		  williams2003representation,
+  address	= {Cambridge, MA},
+  author	= {Williams, Edwin S.},
+  publisher	= {MIT Press},
+  title		= {Representation Theory},
+  year		= {2003}
+}
+
 @Article{	  trettenbrein2015ug,
   author	= {Trettenbrein, Patrick C.},
   journal	= {Questions and Answers in Linguistics},
