--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Book{		  harris2017exponence,
+  address	= {Oxford},
+  author	= {Harris, Alice C.},
+  publisher	= {Oxford University Press},
+  title		= {Multiple Exponence},
+  year		= {2017}
+}
+
+@Book{		  harley2006words,
+  address	= {London},
+  author	= {Harley, Heidi},
+  publisher	= {Wiley Blackwell},
+  title		= {English Words: A Linguistic Introduction},
+  year		= {2006}
+}
+
+@Article{	  haspelmath2020morph,
+  author	= {Haspelmath, Martin},
+  journal	= {Morphology},
+  number	= {2},
+  pages		= {117--134},
+  title		= {The morph as a minimal linguistic form},
+  volume	= {30},
+  year		= {2020}
+}
+
 @Article{	  balari2020ling,
   author	= {Balari, Sergi},
   journal	= {ReGroc. Revista de Gram{\'a}tica Orientada a las
