--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,150 @@
 
+@InBook{	  vanrooij2011nonmonotonic,
+  author	= {van Rooij, Robert and Schulz, Katrin},
+  booktitle	= {Handbook of Logic and Language},
+  editor	= {van Benthem, Johan and Meulen, Alice G. B. ter},
+  pages		= {839-856},
+  publisher	= {Elsevier},
+  title		= {Non-Monotonic Reasoning in Interpretation (Update of cap.
+		  17)},
+  year		= {2011}
+}
+
+@InBook{	  thomason2011nonmonotonicity,
+  address	= {Amsterdam; Boston},
+  author	= {Thomason, Richmond H.},
+  booktitle	= {Handbook of logic and language},
+  editor	= {van Benthem, Johan and Meulen, Alice G. B. ter},
+  publisher	= {Elsevier},
+  title		= {Non-monotonicity in Linguistics},
+  year		= {2011}
+}
+
+@Book{		  benthem2011handbook,
+  address	= {Amsterdam ; Boston},
+  edition	= {2nd ed},
+  editor	= {van Benthem, Johan and Meulen, Alice G. B. ter},
+  publisher	= {Elsevier},
+  series	= {Elsevier insights},
+  title		= {Handbook of logic and language},
+  year		= {2011}
+}
+
+@InBook{	  strasser2019nonmonotonic,
+  author	= {Strasser, Christian and Antonelli, G. Aldo},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Zalta, Edward N.},
+  title		= {Non-monotonic Logic},
+  year		= {2017}
+}
+
+@InBook{	  koons2017defeasible,
+  author	= {Koons, Robert},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Zalta, Edward N.},
+  title		= {Defeasible Reasoning},
+  year		= {2017}
+}
+
+@Book{		  norris2008meaning,
+  address	= {New York},
+  author	= {Lance, Mark Norris and O'Leary-Hawthorne, John},
+  publisher	= {Cambridge University Press},
+  title		= {The Grammar of Meaning: Normativity and Semantic
+		  Discourse},
+  year		= {2008}
+}
+
+@Book{		  haslanger2012resisting,
+  author	= {Haslanger, Sally},
+  publisher	= {Oxford University Press},
+  title		= {Resisting Reality},
+  year		= {2012}
+}
+
+@Article{	  meyer2013pointing,
+  author	= {Meyer, Meredith and Baldwin, Dare A.},
+  journal	= {Language Learning and Development},
+  number	= {3},
+  pages		= {245--265},
+  title		= {Pointing As a Socio-Pragmatic Cue to Particular vs.
+		  Generic Reference},
+  volume	= {9},
+  year		= {2013}
+}
+
+@Article{	  hollander2002generic,
+  author	= {Hollander, MA and Gelman, SA and Star, J},
+  journal	= {Dev Psychol},
+  number	= {6},
+  pages		= {883--894},
+  title		= {Children's interpretation of generic noun phrases.},
+  volume	= {38},
+  year		= {2002}
+}
+
+@Article{	  cimpian2007cues,
+  author	= {Cimpian, Andrei et al.},
+  journal	= {Psychological Science},
+  number	= {4},
+  pages		= {314--316},
+  title		= {Subtle Linguistic Cues Affect Children's Motivation},
+  volume	= {18},
+  year		= {2007}
+}
+
+@Article{	  bastian2006essentialism,
+  author	= {Bastian, Brock and Haslam, Nick},
+  journal	= {Journal of Experimental Social Psychology},
+  number	= {2},
+  pages		= {228--235},
+  title		= {Psychological essentialism and stereotype endorsement},
+  volume	= {42},
+  year		= {2006}
+}
+
+@Article{	  shih1999stereotype,
+  author	= {Shih, Margaret and Pittinsky, Todd L. and Ambady, Nalini},
+  journal	= {Psychological Science},
+  number	= {1},
+  pages		= {80--83},
+  title		= {Stereotype Susceptibility: Identity Salience and Shifts in
+		  Quantitative Performance},
+  volume	= {10},
+  year		= {1999}
+}
+
+@InBook{	  leslie2013essence,
+  author	= {Leslie, Sarah-Jane},
+  booktitle	= {Oxford Studies in Epistemology Volume 4},
+  pages		= {108-165},
+  publisher	= {Oxford University Press},
+  title		= {Essence and Natural Kinds: When Science Meets Preschooler
+		  Intuition1},
+  year		= {2013}
+}
+
+@Article{	  leslie2017sin,
+  author	= {Leslie, Sarah-Jane},
+  journal	= {Journal of Philosophy},
+  number	= {8},
+  pages		= {393--421},
+  title		= {The Original Sin of Cognition},
+  volume	= {114},
+  year		= {2017}
+}
+
+@InBook{	  haslanger2011ideology,
+  address	= {Dordrecht},
+  author	= {Haslanger, Sally},
+  booktitle	= {Feminist Metaphysics},
+  editor	= {Witt, Charlotte},
+  pages		= {179-207},
+  publisher	= {Springer Netherlands},
+  title		= {Ideology, Generics, and Common Ground},
+  year		= {2011}
+}
+
 @Book{		  harris2017exponence,
   address	= {Oxford},
   author	= {Harris, Alice C.},
