--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@PhDThesis{	  boutilier1992non-default,
+  address	= {Toronto, Canada},
+  author	= {Boutilier, Craig E.},
+  pages		= {384},
+  school	= {University of Toronto},
+  title		= {Conditional logics for default reasoning and belief
+		  revision},
+  year		= {1992}
+}
+
 @InBook{	  vanrooij2011nonmonotonic,
   author	= {van Rooij, Robert and Schulz, Katrin},
   booktitle	= {Handbook of Logic and Language},
