--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  kotek2019composing,
+  address	= {Cambridge, MA},
+  author	= {Kotek, Hadas},
+  publisher	= {The MIT Press},
+  title		= {Composing Questions},
+  year		= {2019}
+}
+
 @PhDThesis{	  boutilier1992non-default,
   address	= {Toronto, Canada},
   author	= {Boutilier, Craig E.},
