--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,73 @@
 
+@Article{	  hayashi2020labeling,
+  author	= {Hayashi, Norimasa},
+  journal	= {Syntax},
+  title		= {Labeling without Weak Heads},
+  year		= {2020}
+}
+
+@Article{	  skordos2020or,
+  author	= {Skordos, Dimitrios and Feiman, Roman and Bale, Alan and
+		  Barner, David},
+  journal	= {Journal of Semantics},
+  number	= {2},
+  pages		= {247--267},
+  title		= {Do Children Interpret `or' Conjunctively},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Article{	  vanrooij2020generic,
+  author	= {van Rooij, Robert and Schulz, Katrin},
+  journal	= {Journal of Semantics},
+  number	= {2},
+  pages		= {269--295},
+  title		= {A Causal Semantics of IS Generics},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Article{	  gotzner2020disjunction,
+  author	= {Gotzner, Nicole and Barner, David and Crain, Stephen},
+  journal	= {Journal of Semantics},
+  number	= {2},
+  pages		= {219--245},
+  title		= {Disjunction Triggers Exhaustivity Implicatures in 4- to
+		  5-Year-Olds: Investigating the Role of Access to
+		  Alternatives},
+  volume	= {37},
+  year		= {2020}
+}
+
+@InBook{	  pelletier1997defaults,
+  author	= {Pelletier, Francis Jeffry and Asher, Nicholas},
+  booktitle	= {Handbook of Logic and Language},
+  editor	= {van Benthem, Johan and Meulen, Alice G. B. ter},
+  pages		= {1125-1177},
+  publisher	= {Elsevier},
+  title		= {Generics and Defaults},
+  year		= {1997}
+}
+
+@Book{		  greenberg2003genericity,
+  address	= {New York},
+  author	= {Greenberg, Yael},
+  publisher	= {Routledge},
+  title		= {Manifestations of genericity},
+  year		= {2003}
+}
+
+@Article{	  greenberg2007exceptions-to-generi,
+  author	= {Greenberg, Yael},
+  journal	= {Journal of Semantics},
+  number	= {2},
+  pages		= {131--167},
+  title		= {Exceptions to Generics: Where Vagueness, Context
+		  Dependence and Modality Interact},
+  volume	= {24},
+  year		= {2007}
+}
+
 @Book{		  kotek2019composing,
   address	= {Cambridge, MA},
   author	= {Kotek, Hadas},
@@ -16656,17 +16725,6 @@
 		  Logicality},
   volume	= {13},
   year		= {1996}
-}
-
-@Article{	  greenberg2007exceptions-to-generi,
-  author	= {Greenberg, Yael},
-  journal	= {Journal of Semantics},
-  number	= {2},
-  pages		= {131--167},
-  title		= {Exceptions to Generics: Where Vagueness, Context
-		  Dependence and Modality Interact},
-  volume	= {24},
-  year		= {2007}
 }
 
 @InCollection{	  horn1975neg-raising-predicat,
